# legendsofadventure

./: README.md  pyproject.toml
Code/: boss.py  convert.py  debug.py  enemy.py  entity.py  level.py  magic.py  main.py  miniboss.py  particles.py  player.py  settings.py  support.py  tile.py  ui.py  upgrade.py  weapon.py
Tiled_files/level/level_data/: map.tmx
Tiled_files/level/tilesets/: desert_tiles.tsx  forestDesert_tiles.tsx  forest_tiles.tsx  swampForest_tiles.tsx  swamp_tiles.tsx  taigaForest_tiles.tsx  taiga_tiles.tsx  tundraForest_tiles.tsx  tundraPath_.tsx  tundraTaiga_tiles.tsx  tundra_ [bridgeVertical].tsx  tundra_ [fencesAndWalls].tsx  tundra_ [resources].tsx  tundra_tiles.tsx
exec/: Legends of Adventure.lnk
graph_level_1/level/level_data/: map_1.tmx  map_buildings.csv  map_main_char.csv  map_swamp_elements.csv  map_terrain.csv  map_tundra_elements.csv
graph_level_1/level/tilesets/: desert_ [resources].tsx  desert_tiles.tsx  (+11 more)
level/level_data/: map.tmx  map64.tmx  map_1.tmx  map_boundaries.csv  map_elements.csv  map_enemies.csv  map_enemiesmodified.csv  map_enemiesmodified2.csv  map_forest2_elements.csv  map_forest_elements.csv  map_terrain.csv  map_tundra_elements.csv
level/tilesets/: desert_ [resources].tsx  forestDesert_tiles.tsx  forest_ [bridgeHorizontal].tsx  forest_ [fencesAndWalls].tsx  forest_ [fountain].tsx  forest_ [resources].tsx  swampForest_tiles.tsx  swamp_ [resources].tsx  taigaForest_tiles.tsx  taiga_tiles.tsx  tundraPath_.tsx  tundra_ [bridgeVertical].tsx  tundra_ [fencesAndWalls].tsx  tundra_ [resources].tsx  tundra_tiles.tsx
(+10 files in other folders)
